--- a/demo/statics/css/carbonFundingDetail.css
+++ b/demo/statics/css/carbonFundingDetail.css
@@ -1,298 +1,2 @@
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-.clearfix {
-  *zoom: 1;
-}
-
-.ellipsis {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.funding-detail {
-  width: 960px;
-  margin: 0px auto 40px;
-}
-.funding-detail .thumbnail {
-  float: left;
-  width: 326px;
-  padding: 15px;
-  border: 1px solid #eeeeee;
-}
-.funding-detail .thumbnail img {
-  width: 100%;
-  cursor: pointer;
-}
-.funding-detail .detail-con {
-  float: right;
-  width: 500px;
-  padding-right: 10px;
-}
-.funding-detail .detail-con h3 {
-  font-size: 30px;
-  margin-bottom: 30px;
-}
-.funding-detail .detail-con h3 span {
-  color: #24b026;
-}
-.funding-detail .detail-con p {
-  line-height: 1.5;
-  text-indent: 2em;
-  text-align: justify;
-  text-justify: inter-ideograph;
-}
-
-.funding-detail-pic {
-  width: 960px;
-  margin: 40px auto;
-}
-.funding-detail-pic ul {
-  width: 912px;
-  margin: 0 auto;
-  padding: 10px;
-  background-color: #f5f5f5;
-}
-.funding-detail-pic li {
-  float: left;
-  margin: 10px;
-  width: 284px;
-  height: 210px;
-}
-.funding-detail-pic li img {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-}
-
-.funding-detail-address {
-  width: 960px;
-  margin: 0 auto;
-}
-.funding-detail-address .title {
-  font-size: 24px;
-  padding: 10px 0;
-  border-bottom: 1px solid #eeeeee;
-}
-.funding-detail-address .container {
-  padding-top: 20px;
-}
-.funding-detail-address .con {
-  float: left;
-  width: 500px;
-}
-.funding-detail-address .con h3 {
-  color: #24b026;
-  font-size: 20px;
-  margin-bottom: 10px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eeeeee;
-}
-.funding-detail-address .con p {
-  line-height: 2.5;
-}
-.funding-detail-address .con p i {
-  display: inline-block;
-  vertical-align: middle;
-  width: 25px;
-  height: 22px;
-}
-.funding-detail-address .con .address {
-  background: url(../image/address.png) no-repeat 0 center;
-}
-.funding-detail-address .con .tel {
-  background: url(../image/tel.png) no-repeat 0 center;
-}
-.funding-detail-address .con .time {
-  background: url(../image/clock.png) no-repeat 0 center;
-}
-.funding-detail-address .map {
-  float: right;
-  width: 438px;
-  height: 336px;
-}
-.funding-detail-address .map img {
-  width: 100%;
-  height: 100%;
-}
-
-.funding-detail-coupon {
-  width: 1080px;
-  margin: 0 auto;
-}
-.funding-detail-coupon .title {
-  font-size: 24px;
-  padding: 10px 0;
-  border-bottom: 1px solid #eeeeee;
-}
-.funding-detail-coupon .container {
-  padding-top: 20px;
-}
-.funding-detail-coupon .container .coupon-item {
-  float: left;
-  border: 1px solid #eeeeee;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px;
-  margin: 10px;
-}
-.funding-detail-coupon .container .coupon-item.exchange-coupon {
-  background: url(../image/exchange-coupon.png) no-repeat left center;
-}
-.funding-detail-coupon .container .coupon-item.cash-coupon {
-  background: url(../image/cash-coupon.png) no-repeat left center;
-}
-.funding-detail-coupon .container .coupon-item.goods-coupon {
-  background: url(../image/goods-coupon.png) no-repeat left center;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .coupon-center .expiry {
-  margin-top: 0;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .gold {
-  float: left;
-  width: 90px;
-  height: 97px;
-  background: url(../image/gold-card.png) no-repeat 10px center;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .inner h4, .funding-detail-coupon .container .coupon-item.gold-coupon .inner h5, .funding-detail-coupon .container .coupon-item.gold-coupon .inner .open-hours, .funding-detail-coupon .container .coupon-item.gold-coupon .inner .expiry {
-  width: 196px;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5 {
-  margin: 0;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .inner .open-hours {
-  margin: 0;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .inner h4 {
-  margin-bottom: 0;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5, .funding-detail-coupon .container .coupon-item.gold-coupon .inner h4 {
-  color: #e4a30b;
-}
-.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5 b, .funding-detail-coupon .container .coupon-item.gold-coupon .inner h4 b {
-  font-size: 24px;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .coupon-center .expiry {
-  margin-top: 0;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .gold {
-  float: left;
-  width: 90px;
-  height: 97px;
-  background: url(../image/silver-card.png) no-repeat 10px center;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .inner h4, .funding-detail-coupon .container .coupon-item.silver-coupon .inner h5, .funding-detail-coupon .container .coupon-item.silver-coupon .inner .open-hours, .funding-detail-coupon .container .coupon-item.silver-coupon .inner .expiry {
-  width: 196px;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5 {
-  margin: 0;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .inner .open-hours {
-  margin: 0;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .inner h4 {
-  margin-bottom: 0;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5, .funding-detail-coupon .container .coupon-item.silver-coupon .inner h4 {
-  color: #6d8798;
-}
-.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5 b, .funding-detail-coupon .container .coupon-item.silver-coupon .inner h4 b {
-  font-size: 24px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-left {
-  display: inline-block;
-  vertical-align: middle;
-  width: 22px;
-  padding: 0 10px;
-  font-size: 16px;
-  text-align: center;
-  color: #fff;
-}
-.funding-detail-coupon .container .coupon-item .coupon-center {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0 22px 0 10px;
-  background: url(../image/driver.png) no-repeat right center;
-}
-.funding-detail-coupon .container .coupon-item .coupon-center h4 {
-  font-size: 18px;
-  margin: 10px 0;
-  width: 240px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-center h5 {
-  font-size: 12px;
-  margin: 10px 0;
-  width: 240px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-center .open-hours {
-  font-size: 12px;
-  margin: 10px 0;
-  color: #a2a2a2;
-  width: 240px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-center .expiry {
-  font-size: 14px;
-  margin: 10px 0;
-  color: #a2a2a2;
-  width: 240px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-center .inner .text-wrap {
-  float: right;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right {
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
-  padding-right: 15px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right .tanbi {
-  width: 180px;
-  color: #f33600;
-  font-size: 22px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right .tanbi i {
-  display: inline-block;
-  vertical-align: middle;
-  width: 26px;
-  height: 16px;
-  background: url(../image/icons/icon-user-tanbi.png) no-repeat center center;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right .tanbi span {
-  color: #a2a2a2;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right .btn {
-  display: inline-block;
-  cursor: pointer;
-  border: 1px solid #24b026;
-  font-size: 14px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  margin: 10px 0px;
-  padding: 5px 10px;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right .btn-success {
-  background-color: #24b026;
-  color: #fff;
-}
-.funding-detail-coupon .container .coupon-item .coupon-right p {
-  font-size: 14px;
-  color: #a2a2a2;
-}
-
-.load-more {
-  width: 100px;
-  margin: 10px auto;
-  min-height: 22px;
-  padding-left: 30px;
-  cursor: pointer;
-  background: url(../image/get-more.png) no-repeat 0px center;
-}
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}.clearfix{*zoom:1}.ellipsis{white-space:nowrap;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow:hidden}.funding-detail{width:960px;margin:0px auto 40px}.funding-detail .thumbnail{float:left;width:326px;padding:15px;border:1px solid #eee}.funding-detail .thumbnail img{width:100%;cursor:pointer}.funding-detail .detail-con{float:right;width:500px;padding-right:10px}.funding-detail .detail-con h3{font-size:30px;margin-bottom:30px}.funding-detail .detail-con h3 span{color:#24b026}.funding-detail .detail-con p{line-height:1.5;text-indent:2em;text-align:justify;text-justify:inter-ideograph}.funding-detail-pic{width:960px;margin:40px auto}.funding-detail-pic ul{width:912px;margin:0 auto;padding:10px;background-color:#f5f5f5}.funding-detail-pic li{float:left;margin:10px;width:284px;height:210px}.funding-detail-pic li img{width:100%;height:100%;cursor:pointer}.funding-detail-address{width:960px;margin:0 auto}.funding-detail-address .title{font-size:24px;padding:10px 0;border-bottom:1px solid #eee}.funding-detail-address .container{padding-top:20px}.funding-detail-address .con{float:left;width:500px}.funding-detail-address .con h3{color:#24b026;font-size:20px;margin-bottom:10px;padding-bottom:20px;border-bottom:1px solid #eee}.funding-detail-address .con p{line-height:2.5}.funding-detail-address .con p i{display:inline-block;vertical-align:middle;width:25px;height:22px}.funding-detail-address .con .address{background:url(../image/address.png) no-repeat 0 center}.funding-detail-address .con .tel{background:url(../image/tel.png) no-repeat 0 center}.funding-detail-address .con .time{background:url(../image/clock.png) no-repeat 0 center}.funding-detail-address .map{float:right;width:438px;height:336px}.funding-detail-address .map img{width:100%;height:100%}.funding-detail-coupon{width:980px;margin:0 auto}.funding-detail-coupon .title{width:960px;margin:0 auto;font-size:24px;padding:10px 0;border-bottom:1px solid #eee}.funding-detail-coupon .container{padding-top:20px;padding-bottom:10px}.funding-detail-coupon .container .coupon-item{float:left;border:1px solid #eee;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;border-radius:5px;margin:10px;height:126px;width:468px}.funding-detail-coupon .container .coupon-item.exchange-coupon{background:url(../image/exchange-coupon.png) no-repeat left center}.funding-detail-coupon .container .coupon-item.cash-coupon{background:url(../image/cash-coupon.png) no-repeat left center}.funding-detail-coupon .container .coupon-item.goods-coupon{background:url(../image/goods-coupon.png) no-repeat left center}.funding-detail-coupon .container .coupon-item.gold-coupon .coupon-center .expiry{margin-top:0}.funding-detail-coupon .container .coupon-item.gold-coupon .gold{float:left;width:90px;height:97px;background:url(../image/gold-card.png) no-repeat 10px center}.funding-detail-coupon .container .coupon-item.gold-coupon .inner h4,.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5,.funding-detail-coupon .container .coupon-item.gold-coupon .inner .open-hours,.funding-detail-coupon .container .coupon-item.gold-coupon .inner .expiry{width:196px}.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5{margin:0}.funding-detail-coupon .container .coupon-item.gold-coupon .inner .open-hours{margin:0}.funding-detail-coupon .container .coupon-item.gold-coupon .inner h4{margin-bottom:0}.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5,.funding-detail-coupon .container .coupon-item.gold-coupon .inner h4{color:#e4a30b}.funding-detail-coupon .container .coupon-item.gold-coupon .inner h5 b,.funding-detail-coupon .container .coupon-item.gold-coupon .inner h4 b{font-size:24px}.funding-detail-coupon .container .coupon-item.silver-coupon .coupon-center .expiry{margin-top:0}.funding-detail-coupon .container .coupon-item.silver-coupon .gold{float:left;width:75px;height:97px;background:url(../image/silver-card.png) no-repeat 5px center}.funding-detail-coupon .container .coupon-item.silver-coupon .inner h4,.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5,.funding-detail-coupon .container .coupon-item.silver-coupon .inner .open-hours,.funding-detail-coupon .container .coupon-item.silver-coupon .inner .expiry{width:208px}.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5{margin:0}.funding-detail-coupon .container .coupon-item.silver-coupon .inner .open-hours{margin:0}.funding-detail-coupon .container .coupon-item.silver-coupon .inner h4{margin-bottom:0}.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5,.funding-detail-coupon .container .coupon-item.silver-coupon .inner h4{color:#6d8798}.funding-detail-coupon .container .coupon-item.silver-coupon .inner h5 b,.funding-detail-coupon .container .coupon-item.silver-coupon .inner h4 b{font-size:24px}.funding-detail-coupon .container .coupon-item .coupon-left{float:left;display:inline-block;vertical-align:middle;width:22px;padding:30px 10px;font-size:16px;text-align:center;color:#fff}.funding-detail-coupon .container .coupon-item .coupon-center{float:left;display:inline-block;vertical-align:middle;padding:0 20px 0 10px;background:url(../image/driver.png) no-repeat right center;height:129px;margin-top:-1px}.funding-detail-coupon .container .coupon-item .coupon-center h4{font-size:18px;margin:10px 0;width:240px}.funding-detail-coupon .container .coupon-item .coupon-center h5{font-size:12px;margin:10px 0;width:200px}.funding-detail-coupon .container .coupon-item .coupon-center .open-hours{font-size:12px;margin:10px 0;color:#a2a2a2;width:230px}.funding-detail-coupon .container .coupon-item .coupon-center .expiry{font-size:14px;margin:10px 0;color:#a2a2a2}.funding-detail-coupon .container .coupon-item .coupon-center .inner .text-wrap{float:right}.funding-detail-coupon .container .coupon-item .coupon-right{display:inline-block;float:right;vertical-align:middle;text-align:center;padding-top:15px;padding-right:5px}.funding-detail-coupon .container .coupon-item .coupon-right .tanbi{width:145px;color:#f33600;font-size:22px}.funding-detail-coupon .container .coupon-item .coupon-right .tanbi i{display:inline-block;vertical-align:middle;width:26px;height:16px;background:url(../image/icons/icon-user-tanbi.png) no-repeat center center}.funding-detail-coupon .container .coupon-item .coupon-right .tanbi span{color:#a2a2a2}.funding-detail-coupon .container .coupon-item .coupon-right .btn{display:inline-block;cursor:pointer;border:1px solid #24b026;font-size:14px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;margin:10px 0px;padding:5px 10px}.funding-detail-coupon .container .coupon-item .coupon-right .btn-success{background-color:#24b026;color:#fff}.funding-detail-coupon .container .coupon-item .coupon-right p{font-size:14px;color:#a2a2a2}.funding-detail-coupon .container .coupon-item .coupon-right p{font-size:14px;color:#a2a2a2}.load-more{width:100px;margin:10px auto 30px;min-height:22px;padding-left:30px;cursor:pointer;background:url(../image/get-more.png) no-repeat 0px center}.loading-more{background:url(../image/icons/icon-loading.gif) no-repeat 0px center}
+/*# sourceMappingURL=carbonFundingDetail.css.map */
