--- a/demo/statics/css/carbonActivityVice.css
+++ b/demo/statics/css/carbonActivityVice.css
@@ -53,6 +53,7 @@
         padding: 15px;
         height: 170px;
         width: 100%;
+        line-height: 1.6;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         /* Firefox */
@@ -71,7 +72,7 @@
         left: -260px;
         top: 0;
         height: 52px;
-        line-height: 52px;
+        line-height: 48px;
         text-align: right;
         font-size: 16px;
         color: #333333;
@@ -121,6 +122,8 @@
       height: 50px;
       line-height: 50px; }
       .fill-list .one-input-item.none-icon input {
+        position: relative;
+        z-index: 1;
         display: inline-block;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -130,7 +133,8 @@
         width: 100%;
         padding: 0 15px; }
         .fill-list .one-input-item.none-icon input.time-input {
-          width: 400px; }
+          padding: 16px 40px 16px 15px;
+          background: none; }
       .input-note {
         position: absolute;
         top: 0;
@@ -152,6 +156,8 @@
       float: left;
       width: 626px;
       border: 1px solid #e5e5e5; }
+    .fill-list.only-show .fill-li {
+      margin-bottom: 10px; }
     .fill-list.only-show .one-area-item {
       border: none; }
       .fill-list.only-show .one-area-item input {
@@ -167,6 +173,47 @@
         width: 160px; }
     .fill-list.only-show .fill-title {
       color: #a9a9a9; }
+  .carbon-activity .input-item {
+    margin-bottom: 30px;
+    width: 418px;
+    height: 46px;
+    font-size: 16px;
+    border: 1px solid #e5e5e5; }
+    .carbon-activity .input-item input {
+      height: 100%;
+      width: 100%;
+      padding: 10px;
+      border: none;
+      outline: none;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box; }
+  .carbon-activity .address-item {
+    position: relative;
+    float: left;
+    width: 128px;
+    margin-right: 15px; }
+    .carbon-activity .address-item input {
+      font-size: 14px;
+      padding-right: 20px; }
+    .carbon-activity .address-item .icon-down {
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      display: inline-block;
+      width: 30px;
+      height: 46px;
+      cursor: pointer;
+      background: url(../../statics/image/icons/icon-dropdown9.png) no-repeat center center; }
+    .carbon-activity .address-item .dropdown-list li {
+      height: 35px;
+      font-size: 14px;
+      line-height: 35px;
+      cursor: pointer;
+      color: #666; }
+      .carbon-activity .address-item .dropdown-list li:hover {
+        background-color: #f8f8f8;
+        color: #999; }
   .carbon-activity .icon-spot {
     display: inline-block;
     background: url("../image/source.png") no-repeat center center;
@@ -178,6 +225,9 @@
     .carbon-activity .icon-spot.end {
       background-image: url("../image/destination.png"); }
   .carbon-activity .icon-time {
+    position: absolute;
+    right: 10px;
+    top: 12px;
     display: inline-block;
     background: url("../image/icons/icon-canlendar.png") no-repeat center center;
     height: 25px;
@@ -214,7 +264,8 @@
     background: #24af26;
     text-align: center;
     width: 210px;
-    font-size: 24px; }
+    font-size: 24px;
+    cursor: pointer; }
   .carbon-activity .img-box {
     overflow: hidden;
     width: 639px; }
@@ -227,7 +278,19 @@
       margin-bottom: 15px;
       background: url("../image/bg-default.png") no-repeat center center;
       background-color: #ebebeb; }
+      .carbon-activity .img-box .img-default input {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 12;
+        width: 200px;
+        height: 130px;
+        display: inline-block;
+        opacity: 0;
+        filter: alpha(opacity=0); }
       .carbon-activity .img-box .img-default img {
+        z-index: 11;
+        position: relative;
         width: 100%;
         height: 100%; }
       .carbon-activity .img-box .img-default .default-note {
@@ -408,6 +471,7 @@
       padding-top: 25px;
       overflow: hidden; }
       .carbon-activity .goods-detail-box .goods-function .goods-function-btn {
+        position: relative;
         cursor: pointer;
         float: left;
         height: 30px;
@@ -466,7 +530,7 @@
     display: inline-block;
     vertical-align: middle;
     width: 20px;
-    height: 20px;
+    height: 25px;
     margin-right: 10px;
     background: url("../image/icons/icon-exchange.png") no-repeat center center; }
     .carbon-activity .icon-exchange.people {
@@ -477,49 +541,12 @@
       background-image: url("../image/icons/icon-clock.png"); }
     .carbon-activity .icon-exchange.spot {
       background-image: url("../image/address.png"); }
-  .carbon-activity .btn {
-    position: relative; }
-    .carbon-activity .btn .add-fri-box {
-      position: absolute;
-      width: 200px;
-      bottom: -82px;
-      left: 0;
-      padding: 15px 20px;
-      text-align: center;
-      border: 1px solid #24b026; }
-      .carbon-activity .btn .add-fri-box:after {
-        content: "";
-        position: absolute;
-        width: 13px;
-        height: 11px;
-        left: 40px;
-        top: -10px;
-        background: url("../image/icon_arrow.jpg") no-repeat center center; }
-      .carbon-activity .btn .add-fri-box .fri-text {
-        font-size: 14px;
-        color: #333333;
-        margin-bottom: 5px;
-        line-height: 1.2; }
-        .carbon-activity .btn .add-fri-box .fri-text .icon-warn-little {
-          display: inline-block;
-          background: url("../image/icons/icon-inputnote.png") no-repeat center center;
-          height: 20px;
-          width: 20px;
-          margin-right: 5px;
-          vertical-align: middle; }
-      .carbon-activity .btn .add-fri-box .fri-note {
-        line-height: 1.2;
-        text-align: center;
-        font-size: 12px;
-        color: #a9a9a9; }
-        .carbon-activity .btn .add-fri-box .fri-note .add-fri-note {
-          color: #24b026; }
   .carbon-activity .wrap-register.activity-plan {
-    width: 960px;
+    width: 980px;
     margin: 0 auto;
     padding-top: 50px; }
     .carbon-activity .wrap-register.activity-plan .wrap-process {
-      width: 100%; }
+      width: 960px; }
       .carbon-activity .wrap-register.activity-plan .wrap-process .process-part {
         width: 320px; }
         .carbon-activity .wrap-register.activity-plan .wrap-process .process-part .process-number {
@@ -531,26 +558,28 @@
           top: -22px;
           background: url("../image/icons/icon-round45.png") no-repeat center center; }
           .carbon-activity .wrap-register.activity-plan .wrap-process .process-part .process-number img {
-            background: #ffffff; }
+            /* background: #ffffff; */
+            width: 20px; }
         .carbon-activity .wrap-register.activity-plan .wrap-process .process-part.part-finished .process-number {
           background-image: url("../image/icons/icon-round45-active.png"); }
           .carbon-activity .wrap-register.activity-plan .wrap-process .process-part.part-finished .process-number.none-bg {
             background: none; }
   .carbon-activity .process-detail-box {
-    width: 960px;
+    width: 980px;
     margin: 0 auto;
     /* 步骤一 */
     /* 步骤二 */ }
     .carbon-activity .process-detail-box .process-title {
       font-size: 18px;
       color: #333333;
+      padding-left: 10px;
       padding-bottom: 20px; }
     .carbon-activity .process-detail-box .process-next {
-      margin-top: 160px;
-      margin-bottom: 30px;
+      padding: 18px 15px;
+      margin: 160px auto 30px;
+      width: 930px;
       background-color: #fafafa;
-      overflow: hidden;
-      padding: 18px 15px; }
+      overflow: hidden; }
       .carbon-activity .process-detail-box .process-next .next-button {
         float: right;
         font-size: 16px;
@@ -565,7 +594,8 @@
     .carbon-activity .process-detail-box .select-plan-item {
       border: 2px solid #eeeeee;
       float: left;
-      width: 466px; }
+      width: 466px;
+      margin: 0 10px 20px; }
       .carbon-activity .process-detail-box .select-plan-item.active {
         border-color: #24b026;
         position: relative; }
@@ -577,8 +607,6 @@
           background: url("../image/icons/icon-pass.png") no-repeat center center;
           bottom: 0;
           right: 0; }
-      .carbon-activity .process-detail-box .select-plan-item:first-child {
-        margin-right: 20px; }
       .carbon-activity .process-detail-box .select-plan-item .plan-money-box {
         background-color: #fafafa;
         padding: 15px 20px;
@@ -886,8 +914,50 @@
     height: 46px;
     padding: 102px 0; }
   .change-text .input-item {
+    width: 128px;
+    height: 46px;
+    font-size: 16px;
+    border: 1px solid #e5e5e5;
     display: inline-block;
     margin: 0;
     margin-left: 20px;
     float: none;
     position: relative; }
+    .change-text .input-item input {
+      font-size: 14px;
+      height: 100%;
+      width: 100%;
+      padding: 10px 20px 10px 10px;
+      border: none;
+      outline: none;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box; }
+    .change-text .input-item .icon-down {
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      display: inline-block;
+      width: 30px;
+      height: 46px;
+      cursor: pointer;
+      background: url(../../statics/image/icons/icon-dropdown9.png) no-repeat center center; }
+    .change-text .input-item .dropdown-list {
+      display: none;
+      position: absolute;
+      left: -1px;
+      width: 128px;
+      overflow-y: auto;
+      max-height: 200px;
+      border: 1px solid #e5e5e5;
+      background-color: #fff; }
+      .change-text .input-item .dropdown-list li {
+        height: 35px;
+        font-size: 14px;
+        line-height: 35px;
+        cursor: pointer;
+        color: #666; }
+        .change-text .input-item .dropdown-list li:hover {
+          background-color: #f5f5f5; }
+
+/*# sourceMappingURL=carbonActivityVice.css.map */
