--- a/demo/statics/css/carbonFunding.css
+++ b/demo/statics/css/carbonFunding.css
@@ -1,227 +1,2 @@
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-.clearfix {
-  *zoom: 1;
-}
-
-.ellipsis {
-  width: 27em;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.funding-banner {
-  padding: 15px 0;
-  background-color: #eeeeee;
-  border-bottom: 1px solid #d4d4d4;
-}
-
-.picScroll-left {
-  width: 1220px;
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-}
-.picScroll-left .prev, .picScroll-left .next {
-  position: absolute;
-  top: 35px;
-  width: 61px;
-  height: 61px;
-  cursor: pointer;
-}
-.picScroll-left .prev {
-  left: 0px;
-  background: url(../image/icon-banner-prev.png) no-repeat center center;
-}
-.picScroll-left .next {
-  right: 0px;
-  background: url(../image/icon-banner-next.png) no-repeat center center;
-}
-.picScroll-left .bd {
-  width: 960px;
-  margin: 0 auto;
-}
-.picScroll-left .bd ul {
-  overflow: hidden;
-  zoom: 1;
-}
-.picScroll-left .bd ul li {
-  margin: 0 8px;
-  float: left;
-  _display: inline;
-  overflow: hidden;
-  text-align: center;
-}
-.picScroll-left .bd ul li .pic {
-  text-align: center;
-  border: 3px solid transparent;
-}
-.picScroll-left .bd ul li .pic:hover {
-  border: 3px solid #24b026;
-}
-.picScroll-left .bd ul li .pic img {
-  width: 226px;
-  height: 130px;
-  display: block;
-}
-
-.carbonFunding-main .search-input {
-  margin-bottom: 20px;
-  padding: 15px 0;
-  background-color: #f8f8f8;
-}
-.carbonFunding-main .search-input .input-wrap {
-  border: 1px solid #e6e5e5;
-  border-radius: 10px;
-  float: right;
-  background-color: #fff;
-}
-.carbonFunding-main .search-input .input-wrap input {
-  float: left;
-  height: 28px;
-  border: none;
-  text-indent: 10px;
-  width: 300px;
-  font-size: 12px;
-  border-radius: 10px;
-  outline: none;
-}
-.carbonFunding-main .search-input .input-wrap .btn-search {
-  float: right;
-  width: 38px;
-  height: 28px;
-  background: url(../image/icon_search.png) no-repeat center center;
-}
-.carbonFunding-main .search-con {
-  padding-top: 15px;
-  position: relative;
-}
-.carbonFunding-main .search-con ul {
-  width: 980px;
-  padding: 10px;
-  margin: 0 auto;
-  position: relative;
-}
-.carbonFunding-main .search-con .item {
-  float: left;
-  width: 245px;
-  height: 268px;
-  position: relative;
-}
-.carbonFunding-main .search-con .item .wrap-item {
-  padding: 10px;
-  width: 225px;
-  -webkit-transition: padding .1s;
-  -moz-transition: padding .1s;
-  -ms-transition: padding .1s;
-  transition: padding .1s;
-}
-.carbonFunding-main .search-con .item .hover-item {
-  position: absolute;
-  left: -10px;
-  top: -10px;
-  z-index: 9;
-  padding: 19px 19px 10px 19px;
-  border: 1px solid #eeeeee;
-  -webkit-box-shadow: 0 0 4px 3px #ddd;
-  -moz-box-shadow: 0 0 3px #ddd;
-  box-shadow: 0 0 3px #ddd;
-  background-color: #fff;
-}
-.carbonFunding-main .search-con .item a .thumbnail {
-  height: 160px;
-}
-.carbonFunding-main .search-con .item a img {
-  width: 100%;
-  height: 100%;
-}
-.carbonFunding-main .search-con .item a h3 {
-  width: auto;
-  font-size: 16px;
-  color: #000;
-  padding: 12px 0;
-  background-color: #fff;
-}
-.carbonFunding-main .search-con .item a p {
-  width: 224px;
-  font-size: 12px;
-  color: #a9a9a9;
-  padding-bottom: 10px;
-  background-color: #fff;
-}
-
-.search-wrap {
-  width: 960px;
-  margin: 0 auto;
-}
-.search-wrap .search-head {
-  font-size: 16px;
-  background-color: #f8f8f8;
-  border: 1px solid #eee;
-}
-.search-wrap .search-head.collapse .fold {
-  background: url(../image/icon_arrow_down.png) no-repeat center right;
-}
-.search-wrap .search-head.collapse .list {
-  height: 64px;
-}
-.search-wrap .search-head .wrap-list {
-  padding: 5px 0;
-  overflow: hidden;
-  background-color: #fff;
-}
-.search-wrap .search-head .label {
-  float: left;
-  width: 140px;
-  text-align: right;
-  line-height: 61px;
-}
-.search-wrap .search-head .list {
-  width: 740px;
-  float: left;
-  margin-left: 12px;
-  overflow: hidden;
-}
-.search-wrap .search-head .list li {
-  float: left;
-  vertical-align: middle;
-  padding: 5px 25px;
-  border-radius: 5px;
-  margin: 10px 2px 5px;
-  border: 1px solid transparent;
-  cursor: pointer;
-}
-.search-wrap .search-head .list li.active, .search-wrap .search-head .list li:hover {
-  border: 1px solid #24b026;
-  background-color: #f0fcf1;
-  color: #1b861d;
-}
-.search-wrap .search-head .fold {
-  margin-right: 15px;
-  float: right;
-  line-height: 61px;
-  padding-right: 15px;
-  background: url(../image/icon_arrow_up.png) no-repeat center right;
-  cursor: pointer;
-  font-size: 12px;
-  color: #a2a2a2;
-}
-
-.load-more {
-  width: 100px;
-  margin: 10px auto;
-  min-height: 22px;
-  padding-left: 30px;
-  cursor: pointer;
-  background: url(../image/get-more.png) no-repeat 0px center;
-}
-
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}.clearfix{*zoom:1}.ellipsis{width:27em;white-space:nowrap;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow:hidden}.funding-banner{padding:15px 0;background-color:#eee;border-bottom:1px solid #d4d4d4}.picScroll-left{width:1220px;margin:0 auto;overflow:hidden;position:relative}.picScroll-left .prev,.picScroll-left .next{position:absolute;top:35px;width:61px;height:61px;cursor:pointer}.picScroll-left .prev{left:0px;background:url(../image/icon-banner-prev.png) no-repeat center center}.picScroll-left .next{right:0px;background:url(../image/icon-banner-next.png) no-repeat center center}.picScroll-left .bd{width:960px;margin:0 auto}.picScroll-left .bd ul{overflow:hidden;zoom:1}.picScroll-left .bd ul li{margin:0 8px;float:left;_display:inline;overflow:hidden;text-align:center}.picScroll-left .bd ul li .pic{text-align:center;border:3px solid transparent}.picScroll-left .bd ul li .pic:hover{border:3px solid #24b026}.picScroll-left .bd ul li .pic img{width:226px;height:130px;display:block}.carbonFunding-main .search-input{margin-bottom:20px;padding:15px 0;background-color:#f8f8f8}.carbonFunding-main .search-input .input-wrap{border:1px solid #e6e5e5;border-radius:10px;float:right;background-color:#fff}.carbonFunding-main .search-input .input-wrap input{float:left;height:28px;border:none;text-indent:10px;width:300px;font-size:12px;border-radius:10px;outline:none}.carbonFunding-main .search-input .input-wrap .btn-search{float:right;width:38px;height:28px;background:url(../image/icon_search.png) no-repeat center center}.carbonFunding-main .search-con{padding-top:15px;position:relative}.carbonFunding-main .search-con ul{width:980px;padding:10px;margin:0 auto;position:relative}.carbonFunding-main .search-con .item{float:left;width:245px;height:268px;position:relative}.carbonFunding-main .search-con .item .wrap-item{padding:10px;width:225px}.carbonFunding-main .search-con .item .hover-item{position:absolute;left:-10px;top:-10px;z-index:9;padding:19px 19px 10px 19px;border:1px solid #eeeeee;-webkit-box-shadow:0 0 4px 3px #ddd;-moz-box-shadow:0 0 3px #ddd;box-shadow:0 0 3px #ddd;background-color:#fff}.carbonFunding-main .search-con .item a .thumbnail{height:160px}.carbonFunding-main .search-con .item a img{width:100%;height:100%}.carbonFunding-main .search-con .item a h3{width:auto;font-size:16px;color:#000;padding:12px 0;background-color:#fff}.carbonFunding-main .search-con .item a p{width:224px;font-size:12px;color:#a9a9a9;padding-bottom:10px;background-color:#fff}.search-wrap{width:960px;margin:0 auto}.search-wrap .search-head{font-size:16px;background-color:#f8f8f8;border:1px solid #eee}.search-wrap .search-head.collapse .fold{background:url(../image/icon_arrow_down.png) no-repeat center right}.search-wrap .search-head.collapse .list{height:55px}.search-wrap .search-head .wrap-list{padding:5px 0;overflow:hidden;background-color:#fff}.search-wrap .search-head .label{float:left;padding-top:15px;padding-right:5px;width:135px;text-align:right}.search-wrap .search-head .list{width:740px;float:left;margin-left:12px;overflow:hidden}.search-wrap .search-head .list li{float:left;vertical-align:middle;padding:5px 25px;border-radius:5px;margin:10px 2px 5px;border:1px solid transparent;cursor:pointer}.search-wrap .search-head .list li.active,.search-wrap .search-head .list li:hover{border:1px solid #24b026;background-color:#f0fcf1;color:#1b861d}.search-wrap .search-head .fold{margin-top:20px;margin-right:15px;float:right;padding-right:15px;background:url(../image/icon_arrow_up.png) no-repeat center right;cursor:pointer;font-size:12px;color:#a2a2a2}.load-more{width:100px;margin:10px auto 30px;min-height:22px;padding-left:30px;cursor:pointer;background:url(../image/get-more.png) no-repeat 0px center}.loading-more{background:url(../image/icons/icon-loading.gif) no-repeat 0px center}
 /*# sourceMappingURL=carbonFunding.css.map */
