--- a/demo/statics/css/chat_box.css
+++ b/demo/statics/css/chat_box.css
@@ -28,6 +28,7 @@
 .chat-box-left{
 	width: 253px;
 	float: left;
+    background-color: #fff;
 }
 
 .chat-box-left .chat-search{
@@ -71,13 +72,12 @@
 .chat-box-left .chat-search a.rid-btn div.rid-box{
      position: absolute;
     width: 100px;
-    height: 91px;
     border: 1px solid #37c639;
     border-radius: 3px;
     box-sizing: border-box;
     background-color: #fff;
     top: 35px;
-    z-index: 9999;
+    z-index: 98;
     padding: 6px;
     line-height: 0;
     display: none;
@@ -117,6 +117,7 @@
    border-right: none;
    overflow: hidden;
    overflow-y: scroll;
+   background-color: #f8f8f8;
 }
 
 .chat-box-left .chat-list::-webkit-scrollbar  
@@ -146,7 +147,7 @@
 }  
 
 .chat-box-left .chat-list{
-	background: url(../image/noreult.jpg) no-repeat center 100px;
+	/* background: url(../image/noreult.jpg) no-repeat center 100px; */
 }
 
 .chat-box-left .chat-list ul.avatar-feeds li{
@@ -248,28 +249,107 @@ position: absolute;
 
 .chat-box-right .chat-box-header a .impress-box{
     position: absolute;
-    width: 175px;
-    height: 43px;
-    border: 1px solid #37c639;
+    padding: 10px 0 5px;
+    width: 250px;
+    border: 1px solid #86db87;
+    font-size: 12px;
+    text-align: left;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
     box-sizing: border-box;
     background-color: #fff;
-    top: 53px;
-    z-index: 9999;
+    top: 55px;
+    left: -30px;
+    z-index: 98;
     display: none;
-    line-height: 0;
 }
+.chat-box-right .chat-box-header .title{
+    margin: 0 10px;
+    padding: 2px  5px;
+    color: #a9a9a9;
+    line-height: 1.4;
+    border-bottom: 1px solid #e5e5e5;
+}
+.chat-box-right .chat-box-header .show-selected{
+    padding: 10px;
+    
+    line-height: 1.4;
+}
+.chat-box-right .chat-box-header .show-selected span{
+    display: inline-block;
+    margin-right: 3px;
+    padding: 2px 5px;
+    border: 1px solid #ff7e26;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    color: #ff7e26;
+    
+}
+.chat-box-right .chat-box-header .show-selected span:first-child{
+    border: 1px solid #15cec3;
+    color: #15cec3;
+}
+.chat-box-right .chat-box-header .show-selected .remove-select{
+    display: inline-block;
+    margin-left: 8px;
+    width: 15px;
+    height: 15px;
+    vertical-align: -2px;
+    background: url(../../statics/image/icons/icon-remove.png) no-repeat;
+    background-size: 15px 15px;
 
+}
+.chat-box-right .chat-box-header .select-mark{
+    padding-top: 10px;
+    padding-left: 5px;
+  
+    line-height: 1.4;
+    overflow: hidden;
+}
+.chat-box-right .chat-box-header .select-mark span{
+   float: left;
+   display: inline-block;
+   padding: 3px 2px;
+   margin: 0px 3px 6px;
+   width: 68px;
+   color: #666;
+   text-align: center;
+   border: 1px solid #e5e5e5;
+   background-color: #f8f8f8;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+}
+.chat-box-right .chat-box-header .mark-operate{
+    margin: 10px 10px;
+    padding: 15px 0 5px;
+   line-height: 1.4;
+   text-align: center;
+   border-top: 1px solid #e5e5e5;
+}
+.chat-box-right .chat-box-header .mark-operate span{
+    margin: 0 6px;
+    padding: 3px 15px;
+    color: #fff;
+    border: none;
+    font-size: 12px;
+    border-radius: 2px;
+     background-color: #37c639;
+}
 .chat-box-right .chat-box-header a .send-coin-box{
 	    position: absolute;
-    width: 156px;
+    width: 180px;
     height: 91px;
     border: 1px solid #37c639;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
     box-sizing: border-box;
     background-color: #fff;
     top: 53px;
-    z-index: 9999;
+    z-index: 95;
     padding: 6px;
     line-height: 0;
 }
@@ -314,6 +394,7 @@ position: absolute;
 .chat-box-right .chat-box-header a .send-coin-box span.now-coin{
 	    margin-top: 6px;
 	    display: block;
+        font-size: 12px;
 }
 
 .chat-box-right .chat-box-header a .send-coin-box button{
@@ -346,12 +427,13 @@ position: absolute;
 
 .chat-box-header a div span.arrow{
     display: block;
-    width: 85px;
-    height: 11px;
-    background: url(../image/icon_arrow.jpg) no-repeat center center;
+    width: 16px;
+    height: 10px;
     position: absolute;
     top: -9px;
-    left: -20px;
+    left: 45px;
+    background:url(../../statics/image/icons/icon-tip-up.png) no-repeat center center;
+    overflow: hidden;
 }
 
 
@@ -372,7 +454,7 @@ position: absolute;
         margin-bottom: 15px;
 }
 
-.chat-box-right .chat-box-con ul li.date-show{
+.chat-box-right .chat-box-con ul .date-show{
     text-align: center;
     color: #c6c6c6;
     font-size: 12px;
