--- a/demo/statics/css/customer.scss
+++ b/demo/statics/css/customer.scss
@@ -10,6 +10,8 @@
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
 }
+$green:#24b026;
+$eee:#eeeeee;
 /**个人中心***/
 .wrap-customer-main{
 	background-color:#f8f8f8;
@@ -197,10 +199,12 @@
 				top:4px;
 				position:absolute;
 				display:inline-block;
-				text-align:center;
-				color:#fff;
 				width:20px;
 				height:20px;
+				line-height:20px;
+				text-align:center;
+				font-size:12px;
+				color:#fff;		
 				background:url(../../statics/image/icons/icon-news.png) no-repeat center center;
 				background-size:18px 18px;
 			}
@@ -263,9 +267,18 @@
 				display:inline-block;
 				width:18px;
 				height:18px;
-				vertical-align:-2px;
+				vertical-align:2px;
 				background:url(../../statics/image/icons/icon-edit18.png) no-repeat center center;
 			}
+			.edit-sign{
+      	display:inline-block;
+      	max-width:280px;
+      	height:20px;
+      	border:none;
+      	outline:none;
+      	color:#fff;
+      	overflow:hidden;
+      }
 			.up-provice{
 				padding-top:10px;
 				padding-bottom:20px;
@@ -320,6 +333,22 @@
 					border-color: #15cec3;
           color: #15cec3;
 				}
+				.expression4{
+					border-color: #15cec3;
+          color: #15cec3;
+				}
+					.expression5{
+					    border-color: #ff7200;
+              color: #ff7200;
+				}
+					.expression6{
+				   border-color: #6dca6e;
+           color: #6dca6e;
+				}
+					.expression7{
+					border-color: #15cec3;
+          color: #15cec3;
+				}
 			}
 		}
 	}
@@ -342,6 +371,11 @@
 			line-height:52px;
 			font-size:20px;
 			border-top:3px solid #fff;
+			-webkit-transition:border-top .3s;
+			-moz-transition:border-top .3s;
+			-ms-transition:border-top .3s;
+			-o-transition:border-top .3s;
+			transition:border-top .3s;
 		}
 		.active-item{
 			position:relative;
@@ -569,10 +603,24 @@
 				border:1px solid #71d272;
 				color:#24b026;
 			}
+			.item-width{
+				width:114px;
+				.icon-edit{
+					display:inline-block;
+					width:14px;
+					height:16px;
+					margin-right:8px;
+					vertical-align:-2px;
+					background:url(../../statics/image/icons/icon-feedback.png) no-repeat center center;
+				}
+			}
 			.active-item{
 				color:#fff;
 				background-color:#24b026;
 				border:1px solid #24b026;
+				.icon-edit{
+					background:url(../../statics/image/icons/icon-feedback-active.png) no-repeat center center;
+				}
 			}
 		}
 		.click-more{
@@ -640,6 +688,7 @@
 	}
 	/**活动推荐**/
 	.list-content-activity{
+
 		.list-activity{
 			padding:0 20px;
 			.activity-item{
@@ -649,11 +698,11 @@
 				}
 			}
 			.activity-right{
-				margin-top:20px;
+				/* margin-top:20px; */
 				float:right;
 				a{
 					margin-left:15px;
-					color:#16b115;
+					color:#24b026;
 					display:inline-block;
 					width:80px;
 					height:30px;
@@ -662,9 +711,14 @@
 					border:1px solid #24b026;
 					@include borderRadius;
 				}
+				.begin{
+					border:1px solid #ff0000;
+					color:#ff0000;
+				}
 			  .doing{
 			  	background-color:#24b026;
 			  	color:#fff;
+			  	border:1px solid #24b026;
 			  }
 			  .ended{
 			  	border:1px solid #a9a9a9;
@@ -692,6 +746,9 @@
 						line-height:1;
 						span{
 							margin-right:5px;
+						}
+						a{
+							color:#333;
 						}
 					}
 					.activity-common{
@@ -740,7 +797,37 @@
 				}
 			}
 		}
-		
+		.myLaunch-list{
+			.activity-right{
+
+				width:90px;
+				text-align:right;
+				.rank-time{
+					display:inline-block;
+					margin-bottom:12px;
+					padding-left:20px;
+					color:#a9a9a9;
+					background: url(../../statics/image/icons/icon-time.png) no-repeat left center;
+				}
+				a{
+					margin-left:0;
+				}
+			}
+		}
+		.myJoin-list{
+			.activity-right{
+				.wrap-rank-time{
+					text-align:right;
+				}
+				.rank-time{
+					display:inline-block;
+					margin-bottom:12px;
+					padding-left:20px;
+					color:#a9a9a9;
+					background: url(../../statics/image/icons/icon-time.png) no-repeat left center;
+				}
+			}
+		}
 	}
 	/**开始活动提醒**/
 	.list-activity-remind{
@@ -790,42 +877,6 @@
 			}
 			.remind-exchange-left{
 				background:url(../../statics/image/icons/icon-activity-exchange88.png) no-repeat;
-			}
-		}
-	}
-	.no-content{
-		padding-bottom:80px;
-		text-align:center;
-		.no-content-remind{
-			padding:55px 0 60px;
-			font-size:24px;
-			color:#a9a9a9;
-			.no-content-icon{
-				display:inline-block;
-				margin-right:25px;
-				width:58px;
-				height:53px;
-				vertical-align:middle;
-				background:url(../../statics/image/icons/icon-smile.png) no-repeat center center;
-			}
-		}
-		.no-content-link{
-			font-size:18px;
-			a{
-				display:inline-block;
-				padding:0 25px;
-				margin:0 12px;
-				height:40px;
-				line-height:40px;
-				border:1px solid #24b026;
-				@include borderRadius;
-			}
-			.link-left{
-				background-color:#24b026;
-				color:#fff;
-			}
-			.link-right{
-				color:#24b026;
 			}
 		}
 	}
@@ -1182,6 +1233,7 @@
 	.myCarbon-list-content{
 		padding-right:15px;
 		padding-left:15px;
+		padding-bottom:30px;
 		.part-title{
 			padding-bottom:5px;
 			padding-left:5px;
@@ -1257,10 +1309,9 @@
 					margin:0;
 					border:none;
 					outline:none;
-					padding:0 15px 0 5px;
+					padding:5px 15px 5px 5px;
 					width:100%;
 					height:100%;
-					line-height:22px;
 					color:#666;
 					font-size:12px;
 					background-color:#fff;
@@ -1480,7 +1531,7 @@
 	.wrap-process{
 		padding-top:5px;
 		position:relative;
-		margin:0 55px;
+		margin:0 20px 0 55px;
 		height:100px;
 		.process-line{
 			position:absolute;
@@ -1635,6 +1686,7 @@
 						text-indent: 10px;
 						cursor:pointer;
 						color:#666;
+						overflow:hidden;
 						&:hover{
 							color:#999;
 							background-color:#f8f8f8;
@@ -1988,15 +2040,487 @@
 		}
 	}
 }
-.loading{
-	display:block;
-	padding:50px 0;
-	text-align:center;
-  i{
-  	display:inline-block;
-  	width:35px;
-  	height:35px;
-  	vertical-align:-12px;
-  	background:url(../../statics/image/icons/icon-loading.gif) no-repeat;
-  }
+/**新优惠券样式**/
+.list-new-coupon{
+	overflow:hidden;
+	.coupon-item{
+		position: relative;
+		margin:0 10px 20px;
+    float: left;
+    width: 313px;
+     height:126px;
+    border:1px solid #e5e5e5;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    .coupon-left{
+    	float:left;
+    	width:36px;
+    	padding:25px 8px 0 10px;
+    	height:100%;
+    	color:#fff;
+    	font-size:16px;
+    	
+    	-webkit-border-radius: 4px 0 0 4px;
+     -moz-border-radius:  4px 0 0 4px;
+     border-radius:  4px 0 0 4px;
+     -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    }
+    .coupon-right{
+    	padding:0 10px 0 12px;
+      height:100%;
+    	overflow:hidden;
+    	margin-left:-5px;
+    	-webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      .coupon-name{
+      	padding:12px 0 10px 0;
+      	font-size:18px;
+      }
+      .store-name{
+      	font-size:12px;
+      	color:#666666;
+      	padding-bottom:7px;
+      }
+      .store-time{
+      	font-size:12px;
+      	color:#a9a9a9;
+      }
+      .exchange-detail{
+      	padding-top:12px;
+      	line-height:18px;
+      	color:#a9a9a9;
+      	font-size:12px;
+      	overflow:hidden;
+      }
+      .exchange-time{
+      	float:left;
+      }
+      .exchange-rank{
+      	float:right;
+      	strong{
+      		padding:0 2px;
+      		color:#f33600;
+      		font-size:18px;
+      		vertical-align:-2px;
+      	}
+      }
+    }
+	}
+	.exchange-item{
+		.coupon-left{
+			background-color:#24b026;
+		}
+		.coupon-right{
+			background:url(../../statics/image/icons/icon-dui200.png) no-repeat -5px center;
+		}
+	}
+	.cash-item{
+		.coupon-left{
+			background-color:#ff9600;
+		}
+		.coupon-right{
+			background:url(../../statics/image/icons/icon-dai200.png) no-repeat -5px center;
+		}
+	}
+	.pickUp-item{
+		.coupon-left{
+			background-color:#15cec3;
+		}
+		.coupon-right{
+			background:url(../../statics/image/icons/icon-ti200.png) no-repeat -5px center;
+		}
+	}
+	.card-item{
+		position: relative;
+		margin:0 10px 20px;
+		padding:0 12px;
+    float: left;
+    width: 313px;
+    height:126px;
+    border:1px solid #e5e5e5;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    .card-up{
+    	position:relative;
+    	padding:10px 0;
+    	overflow:hidden;
+    	.up-left{
+    		float:left;
+    		margin-right:12px;
+    		width:58px;
+    		height:58px;
+    	}
+    	.up-right{
+    		overflow:hidden;
+    	}
+    	.coupon-name{
+    		padding-bottom:6px;
+    		font-size:18px;
+    	}
+    	.store-name{
+    		padding-bottom:4px;
+    		font-size:14px;
+
+    	}
+    	.store-time{
+    		font-size:12px;
+    		color:#a9a9a9;
+    	}
+    	.card-sale{
+    		position:absolute;
+    		right:0;
+    		top:25px;
+    		font-size:24px;
+    		b{
+    			padding-left:5px;
+    			font-size:12px;
+    		}
+    	}
+    }
+    .card-down{
+    	  padding-top:5px;
+    		border-top:1px solid #e5e5e5;
+    		color:#a9a9a9;
+      	font-size:12px;
+      	line-height:18px;
+      	overflow:hidden;
+      	.exchange-time{
+      	float:left;
+       }
+      .exchange-rank{
+      	float:right;
+      	strong{
+      		padding:0 2px;
+      		color:#f33600;
+      		font-size:18px;
+      		vertical-align:-2px;
+      	}
+      }
+    	}
+	}
+	.gold-item{
+		.up-left{
+      background:url(../../statics/image/gold-card.png) no-repeat left center;
+		}
+		.coupon-name,.store-name,.card-sale{
+    color:#e4a30b;
+		}
+	}
+	.silver-item{
+		.up-left{
+      background:url(../../statics/image/silver-card.png) no-repeat left center;
+		}
+		.coupon-name,.store-name,.card-sale{
+    color:#6d8798;
+		}
+	}
+	.card-out-item{
+		
+		.card-up,.card-down{
+    opacity: 0.5;
+		filter: alpha(opacity=50);
+		}
+		.card-losed{
+			position:absolute;
+			top:10px;
+			right:8px;
+			width:63px;
+			height:55px;
+			background:url(../../statics/image/icons/icon-losed.png) no-repeat center center;
+		}
+	}
+}
+.funding-detail-coupon{
+    width: 470px;
+    margin: 0 auto;
+    .container{
+        padding-bottom:10px;
+        .coupon-item{
+            border: 1px solid $eee;
+            -webkit-border-radius: 5px;  
+            -moz-border-radius: 5px;  
+            -ms-border-radius: 5px;     
+            border-radius: 5px;
+            margin-bottom:20px;
+            height: 126px;           
+            &.exchange-coupon{
+                background: url(../image/exchange-coupon.png) no-repeat left center;
+            }
+            &.cash-coupon{
+                background: url(../image/cash-coupon.png) no-repeat left center;
+            }
+            &.goods-coupon{
+                background: url(../image/goods-coupon.png) no-repeat left center;
+            }
+            &.gold-coupon{
+                .coupon-center .expiry{
+                    margin-top: 0;
+                }
+                .gold{
+                        float: left;                  
+                        width: 75px;
+                        height: 97px;
+                        background: url(../image/gold-card.png) no-repeat 5px center;
+                    }
+                .inner{
+                    h4,h5,.open-hours,.expiry{
+                        width: 208px;
+                    }
+                    h5{
+                        margin: 0;
+                    }
+                    .open-hours{
+                        margin: 0;
+                    }
+                    h4{
+                        margin-bottom: 0;
+                    }
+                    h5,h4{
+                        
+                        color: #e4a30b;
+                        b{
+                            font-size: 24px;
+                        }
+                    }
+                    
+                }
+               
+            }
+            
+            &.silver-coupon{
+                .coupon-center .expiry{
+                    margin-top: 0;
+                }
+                .gold{
+                     float: left;                  
+                    width: 75px;
+                    height: 97px;
+                    background: url(../image/silver-card.png) no-repeat 5px center;
+                }
+                .inner{
+                    h4,h5,.open-hours,.expiry{
+                        width: 208px;
+                    }
+                    h5{
+                        margin: 0;
+                    }
+                    .open-hours{
+                        margin: 0;
+                    }
+                    h4{
+                        margin-bottom: 0;
+                    }
+                    h5,h4{
+                        
+                        color: #6d8798;
+                        b{
+                            font-size: 24px;
+                        }
+                    }
+                    
+                }
+               
+            }
+            .coupon-left{
+                float:left;
+                display: inline-block;
+                vertical-align: middle;
+                width: 22px;
+                padding:30px 10px;
+                font-size: 16px;
+                text-align: center;
+                color: #fff;
+            }
+            .coupon-center{
+                float:left;
+                display: inline-block;
+                vertical-align: middle;
+
+                padding:0 20px 0 10px;
+                background: url(../image/driver.png) no-repeat right center;
+                height: 129px;
+                margin-top: -1px;
+                h4{
+                    font-size: 18px;
+                    margin: 10px 0;
+                    width: 240px;
+                }
+                h5{
+                    font-size: 12px;
+                    margin: 10px 0;
+                    width: 200px;
+                }
+                .open-hours{
+                    font-size: 12px;
+                    margin: 10px 0;
+                    color: darken($eee,30%);
+                     width: 230px;
+                }
+                .expiry{
+                    font-size: 14px;
+                    margin: 10px 0;
+                    color: darken($eee,30%);
+                   /*  width: 200px; */
+                }
+                .inner{
+                    
+                 
+                    .text-wrap{
+                        float: right;
+
+                    }                   
+                    
+                }
+            }
+            .coupon-right{
+                display: inline-block;
+                overflow:hidden;
+                width:153px;
+                vertical-align: middle;
+                text-align: center;
+                padding-top:15px;
+                padding-right: 2px;            
+                .tanbi{
+                	  max-width:165px;
+                    color: #f33600;
+                    font-size: 22px;
+                    i{
+                        display: inline-block;
+                        vertical-align: middle;
+                        width: 26px;
+                        height: 16px;
+                        background: url(../image/icons/icon-user-tanbi.png) no-repeat center center;                       
+                    }
+                    span{
+                        color: darken($eee,30%);
+                    }
+                }
+                .btn{
+                    display: inline-block;
+                    cursor: pointer;
+                    border: 1px solid $green;
+                    font-size: 14px;
+                    -webkit-border-radius: 5px;
+                    -moz-border-radius: 5px;
+                    border-radius: 5px;
+                    margin: 10px 0px;
+                    padding: 5px 10px;
+                }
+                .btn-success{
+                   background-color: $green;
+                   color: #fff;
+                }
+                p{
+                    font-size: 14px;
+                    color: darken($eee,30%);
+                }
+                p{
+                    font-size: 14px;
+                    color: darken($eee,30%);
+                }
+            }
+            
+        }
+    }
+}
+.list-new-coupon190{
+	.coupon-item{
+		height:190px;
+		.coupon-left{
+			padding-top:60px;
+		}
+		.coupon-value{
+			padding-top:2px;
+			padding-bottom:10px;
+			color:#a9a9a9;
+			font-size:22px;
+			i{
+				font-style: normal;
+				color:#f33600;
+			}
+			.value-money{
+				display:inline-block;
+				padding-left:22px;
+				background:url(../../statics/image/icons/icon-user-tanbi18.png) no-repeat left center;
+			}
+
+		}
+		.coupon-right{
+			.exchange-detail{
+				padding-top:2px;
+			}
+			.coupon-down{
+
+				margin-top:9px;
+				padding-top:5px;
+				border-top:1px solid #e5e5e5;
+				color:#a9a9a9;
+				font-size:12px;
+			}
+			.exchange-code{
+				float:right;
+				strong{
+					color:#24b026;
+				}
+			}
+		}
+	}
+	.out-coupon-item{
+     color:#a9a9a9;
+     .coupon-left{
+     	background-color:#c7c7c7;
+     	opacity: 0.6;
+     	filter: alpha(opacity=60);
+     }
+     .coupon-right{
+     	opacity: 0.6;
+     	filter: alpha(opacity=60);
+     	 background:url(../../statics/image/icons/icon-out200.png) no-repeat -5px center;
+     	 .store-name{
+     	 	color:#a9a9a9;
+     	 }
+     	 .coupon-value{
+     	 	i{
+     	 		color:#a9a9a9;
+     	 	}
+     	 	.value-money{
+     	 		background:url(../../statics/image/icon_coins.png) no-repeat left center;
+     	 	}
+     	 }
+     	 .exchange-code {
+     	 	strong{
+     	 		color:#a9a9a9;
+     	 	}
+     	 }
+     }
+     .icon-out{
+     	 position: absolute;
+	    top: 8px;
+	    right: 8px;
+	    z-index: 10;
+	    display: inline-block;
+	    width: 70px;
+	    height: 55px;
+     }
+     .icon-out-time{
+     	  background: url(../../statics/image/icons/icon-outTime.png) no-repeat center center;
+     }
+     .icon-out-used{
+     	  background: url(../../statics/image/icons/icon-used.png) no-repeat center center;
+     }
+     .icon-out-losed{
+     	  background: url(../../statics/image/icons/icon-coupon-losed.png) no-repeat center center;
+     }
+	}
 }
