--- a/demo/statics/css/my_friend.css
+++ b/demo/statics/css/my_friend.css
@@ -38,23 +38,25 @@
 }
 
 .carbon-rank .rank-header li{
-    margin-right: 65px;
+    margin-right: 60px;
     height: 100px;
     line-height: 100px;
     float: left;
 }
-
+.carbon-rank .rank-header li.no-margin{
+    margin-right: 0;
+}
 .carbon-rank .rank-header li a.avatar-link{
       margin-right: 15px;
     padding: 2px;
     width: 80px;
     height: 80px;
     border: 1px solid #e6e5e5;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
     overflow: hidden;
     text-align: center;
+     -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -65,6 +67,9 @@
 .carbon-rank .rank-header li img{
 	height: 100%;
     width: 100%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
     vertical-align: baseline;
 }
 
@@ -144,6 +149,7 @@
   border-bottom: 1px dotted #eee;
   padding: 10px;
   position: relative;
+  min-height: 49px;
 }
 
 .carbon-rank dl dd.rank-con ul.rank-list li div.rank-num{
@@ -152,15 +158,16 @@
     text-align: center;
 }
 
-.carbon-rank dl dd.rank-con ul.rank-list li div.rank-num p{
+.carbon-rank .rank-con .rank-list .rank-num p{
     color: #fff;
     padding: 1px 6px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     border-radius: 5px;
     font-size: 15px;
     display: inline-block;
     margin: 0 auto;    
 }
-
 .carbon-rank dl dd.rank-con ul.rank-list li div.avatar{
 	display: inline-block;
     width: 200px;
@@ -175,11 +182,13 @@
 }
 
 .carbon-rank dl dd.rank-con ul.rank-list li div.avatar p{
-	    display: inline;
+    display: inline;
     margin-left: 13px;
     font-size: 15px;
 }
-
+.carbon-rank dl .rank-con .rank-list li .avatar p a{
+    color: #333;
+}
 .carbon-rank dl dd.rank-con ul.rank-list li div.avatar p i{
 	margin-left: 8px;
 }
@@ -190,6 +199,7 @@
 	color: #24b026;
 	font-weight: 400;
 	margin-left: 110px;
+    line-height: 49px;
 }
 .carbon-rank dl dd.rank-con ul.rank-list li div.carbon-num>i{
     color: #d2d2d2;
@@ -202,7 +212,7 @@
 .carbon-rank dl dd.rank-con ul.rank-list li div.medal{
     position: absolute;
     right: 41px;
-    top: 17px;
+    top: 12px;
 }
 
 .rank-con li div.rank-num p{
@@ -231,10 +241,19 @@
   background-color: #fff;
 }
 .carbon-contact .search-box{
+    position: relative;
     padding: 0 18px;
     overflow: hidden;
 }
-
+.carbon-contact .search-box .search-btn{
+    position: absolute;
+    display: inline-block;
+    left: 430px;
+    width: 33px;
+    height: 33px;
+    cursor: pointer;
+    background: url(../image/icon_search.png) no-repeat center center;
+}
 .carbon-contact button,
 .carbon-contact input[type="text"]:focus
 {
@@ -253,7 +272,7 @@
       border-radius: 0;
       padding-left: 10px;
       float: left;
-      background: url(../image/icon_search.png) no-repeat 96% center;
+/*       background: url(../image/icon_search.png) no-repeat 96% center; */
 }
 
 .carbon-contact .search-box button{
@@ -280,13 +299,13 @@
 .carbon-contact .carbon-cantact-con{
     border-bottom: 20px solid #f8f8f8;
     padding: 0 17px;
-    height: 840px;
+    /* height: 840px; */
 }
 
 .carbon-contact ul.friends-list{
      margin:25px 0 35px;
      overflow: hidden;
-     height: 750px;
+    /*  height: 750px; */
 }
 
 
@@ -295,7 +314,18 @@
     overflow: hidden;
     float: left;
 }
-
+.carbon-contact ul.friends-list li .delete-btn{
+    position: absolute;
+    right: 18px;
+    top: -20px;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(../image/icon_deleted.png) no-repeat;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    transition: .3s;
+}
 .carbon-contact ul.friends-list li a{
     display: block;
     float: left;
@@ -306,15 +336,15 @@
     color: #555;    
     box-sizing: border-box;
     position:relative;
-    background: url(../image/icon_deleted.png) no-repeat;
-    background-position: 93px -24px;
+    /* background: url(../image/icon_deleted.png) no-repeat;
+    background-position: 93px -24px; */
     transition: .3s;
 }
 
 .carbon-contact ul.friends-list li a.delete{
     animation: mycencel .3s;
     cursor: pointer;
-    background-position-y:10px;
+    background-position-y:10px
 }
 
 .carbon-contact ul.friends-list li a.delete:hover{
@@ -324,6 +354,8 @@
 .carbon-contact ul.friends-list li a img{
     width: 70px;
     height: 70px;
+    -webkit-border-radius: 999px;
+    -moz-border-radius: 999px;
     border-radius: 999px;
     padding: 3px;
     border:1px solid #ddd;
@@ -404,7 +436,7 @@
 .search-result{
     /*background: #000;*/
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
     background: url(../image/frn_nofound.png) no-repeat center center;
     background-position-y: -100px;
     transition: .3s;
@@ -533,30 +565,39 @@
 
 .may-konw ul.may-know-list li{
     float: left;
-    margin: 0 40px 0 5px;
-    height: 150px;
+    padding: 20px 30px 20px 5px;
+    height: 140px;
+    width: 217px;
     text-align: center;
-    padding: 20px 0;
     color: #555;
+    border-bottom: 1px dotted #e9e9e9;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.may-konw ul.may-know-list li .list-msg{
+    overflow: hidden;
+}
+.may-konw ul.may-know-list li .list-msg img{
+    float: left;
+    padding: 3px;
+    margin-right: 12px;
+    width: 70px;
+    height: 70px;
+    -webkit-border-radius: 999px;
+    -moz-border-radius: 999px;
+    border-radius: 999px;
+    border: 1px solid #ddd;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-.may-konw ul.may-know-list li .list-msg img{
-    width: 70px;
-    height: 70px;
-    border-radius: 999px;
-    padding: 3px;
-    border: 1px solid #ddd;
-    /*display: inline-block;*/
-    float: left;
-}
-
 .may-konw ul.may-know-list li .list-msg p{
-     float: left;
+    overflow: hidden;
     color: #000;
     font-size: 15px;
-    margin-top: 17px;
-    margin-left: 10px;
+    margin-top: 15px;
     text-align: left;
 }
 
@@ -585,45 +626,26 @@ ul.may-know-list li .list-msg p span{
 ul.may-know-list li button.add-friend{
     border: 1px solid #24b026;
     color: #24b026;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
     font-size: 14px;
     letter-spacing: 1px;
-    padding: 3px 8px;
-    padding-left: 32px;
-    margin-left: 88px;
+    padding: 3px 5px 3px 30px;
+    margin-left: 65px;
     background: #fff url(../image/icon_addfriend.png) no-repeat 8px center;
 }
-
-
 ul.may-know-list li button.add-friend:hover{
     border-color: #61c221;
     color: #61c221;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ul.may-know-list li button.added-friend{
+    margin-left: 40px;
+    padding-left: 3px;
+    text-align: center;
+    cursor: not-allowed;
+    background-image: none;
+}
 ul li.select-btn{
     display: inline-block;
     margin-right: 14px;
